--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
 
 <section class="module">
 			<div class="container">
+			<h1 class="alegreya text-center text-xxl">"Rule No.1: Never lose money. Rule No.2: Never forget rule No.1."</h1>
+			<p class="text-center alegreyasc text-normal">- Warren Buffet</p>
 			</div>		
 </section>
 
@@ -216,10 +218,16 @@
 	</div>
 	</section>
 
-		<section class="module">
-					<div class="container">
-					</div>		
-		</section>
+	<section class="module">
+				<div class="container">
+				<h1 class="alegreya text-center text-xl">"The individual investor should act consistently as an investor and not as a speculator." </h1>
+						<p class="text-center alegreyasc text-normal">- Benjamin Graham</p>
+
+				</div>
+
+				
+	</section>
+		
 
 		<!-- ABOUT -->
 <!-- 		<section id="about" class="module">
@@ -306,16 +314,13 @@
 				</div>
 
 		</section>
+		<section class="module">
+					<div class="container">
+					<h1 class="alegreya text-center text-xl">"Someone's sitting in the shade today because someone planted a tree a long time ago."</h1>
+					<p class="text-center alegreyasc text-normal">- Warren Buffet</p>
+					</div>		
+		</section>
 
-
-<section class="module">
-			<div class="container">
-
-
-			</div>
-
-			
-</section>
 		<!--parallax background -->		
 		<section id="corporates" class="module bg-black-alfa-50 fullheight color-white parallax" data-background="assets/images/trading.jpg">
 		
@@ -402,6 +407,10 @@
 		 -->
 	<section class="module">
 			<div class="container">
+			<h1 class="alegreya text-center text-xl">“If you have more than 120 or 130 I.Q. points, you can afford to give the rest away. You don’t need extraordinary intelligence to succeed as an investor.”</h1>
+					<p class="text-center alegreyasc text-normal">- Warren Buffet</p>
+
+			</div>
 
 
 			</div>
