--- a/investor.html
+++ b/investor.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Investkeen Capital</title>
+	<title>Investkeen Capital | Be an Investor</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
@@ -81,20 +81,20 @@
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
 				<ul class="inner-nav onepage-nav pull-right">
 		
-					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#about">About</a></li>
+					<li><a href="http://investkeen.com">Home</a></li>
+					<li><a href="ihttp://investkeen.com#about">About</a></li>
 					<li class="has-submenu">
 					<a>Services</a>
 					 <ul class="submenu">
-							<li><a href="index.html#individual">For Individuals</a></li>
-							<li><a href="index.html#corporates">For Corporates</a></li>
+							<li><a href="http://investkeen.com#individual">For Individuals</a></li>
+							<li><a href="http://investkeen.com#corporates">For Corporates</a></li>
 					 </ul>		
 					</li>
 
-					<li><a href="index.html#education">Education</a></li>
-					<li><a href="index.html#team">Our Team</a></li>
-					<li><a href="index.html#career">Career</a></li>
-					<li><a href="index.html#contact">Contact Us</a></li>
+					<li><a href="http://investkeen.com#education">Education</a></li>
+					<li><a href="http://investkeen.com#team">Our Team</a></li>
+					<li><a href="http://investkeen.com#career">Career</a></li>
+					<li><a href="http://investkeen.com#contact">Contact Us</a></li>
 		
 				</ul>
 			</nav>
@@ -119,7 +119,7 @@
 						</div><br><br>
 						<div class="col-sm-12 text-normal text-center">
 						<p>If you keep your money in your back pocket instead of investing it, your money doesn't work for you and you will never have more money than what you save. Hence, invest to make your money and asset work for you!</p>
-						<p>“It is easy to make money but difficult to make money work you”</p>
+						
 						</div>
 					</div>
 
