--- a/currencyhedging.html
+++ b/currencyhedging.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Investkeen Capital | Be A Trader</title>
+	<title>Investkeen Capital | Currency Hedging</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
@@ -81,20 +81,20 @@
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
 				<ul class="inner-nav onepage-nav pull-right">
 		
-					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#about">About</a></li>
+					<li><a href="http://investkeen.com">Home</a></li>
+					<li><a href="ihttp://investkeen.com#about">About</a></li>
 					<li class="has-submenu">
 					<a>Services</a>
 					 <ul class="submenu">
-							<li><a href="index.html#individual">For Individuals</a></li>
-							<li><a href="index.html#corporates">For Corporates</a></li>
+							<li><a href="http://investkeen.com#individual">For Individuals</a></li>
+							<li><a href="http://investkeen.com#corporates">For Corporates</a></li>
 					 </ul>		
 					</li>
 
-					<li><a href="index.html#education">Education</a></li>
-					<li><a href="index.html#team">Our Team</a></li>
-					<li><a href="index.html#career">Career</a></li>
-					<li><a href="index.html#contact">Contact Us</a></li>
+					<li><a href="http://investkeen.com#education">Education</a></li>
+					<li><a href="http://investkeen.com#team">Our Team</a></li>
+					<li><a href="http://investkeen.com#career">Career</a></li>
+					<li><a href="http://investkeen.com#contact">Contact Us</a></li>
 		
 				</ul>
 			</nav>
@@ -140,6 +140,11 @@
 						<p>All the big retailers that operate internationally use currency hedging to make sure their profits aren’t eroded by currency changes, and small businesses can do it, too.</p><p>At investkeen, among several ways to hedge currency, we use future and options to safeguard your timed transactions, with best research to make solid foundation.</p>
 						<p>
 						If you are interested to know more about our strategies, schedule a call with us below:</p>
+
+						<!-- Change the width and height values to suit you best -->
+						<div class="typeform-widget" data-url="https://shad11.typeform.com/to/mxEpkU" data-text="currency hedging" style="width:100%;height:500px;"></div>
+						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+						<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=mxEpkU&amp;utm_source=typeform.com-4406747-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 					</div>
 				
 				
