added edu pages

--- a/60hrs.html
+++ b/60hrs.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Investkeen Capital | Be A Trader</title>
+	<title>Investkeen Capital | 60 Hours</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
@@ -81,20 +81,20 @@
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
 				<ul class="inner-nav onepage-nav pull-right">
 		
-					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#about">About</a></li>
+					<li><a href="https://investkeen.com">Home</a></li>
+					<li><a href="https://investkeen.com#about">About</a></li>
 					<li class="has-submenu">
 					<a>Services</a>
 					 <ul class="submenu">
-							<li><a href="index.html#individual">For Individuals</a></li>
-							<li><a href="index.html#corporates">For Corporates</a></li>
+							<li><a href="https://investkeen.com#individual">For Individuals</a></li>
+							<li><a href="https://investkeen.com#corporates">For Corporates</a></li>
 					 </ul>		
 					</li>
 
-					<li><a href="index.html#education">Education</a></li>
-					<li><a href="index.html#team">Our Team</a></li>
-					<li><a href="index.html#career">Career</a></li>
-					<li><a href="index.html#contact">Contact Us</a></li>
+					<li><a href="https://investkeen.com#education">Education</a></li>
+					<li><a href="https://investkeen.com#team">Our Team</a></li>
+					<li><a href="https://investkeen.com#career">Career</a></li>
+					<li><a href="https://investkeen.com#contact">Contact Us</a></li>
 		
 				</ul>
 			</nav>
@@ -115,6 +115,12 @@
 
 						<div class="row">
 							<div class="col-sm-12 text-center">
+								<div class="counter">
+									<h1 class="montserrat text-xxxl m-b-5">
+										<span class="counter-timer" data-from="0" data-to="60">60</span>
+									</h1>
+									
+								</div>
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
 							</div>
 						</div><br><br>
@@ -218,7 +224,7 @@
 	<script>
 	    $(function(){
 	        $(".element").typed({
-	            strings: ["^1000 Currency ^600 Hedging"],
+	            strings: ["^1000 Hours"],
 	            typeSpeed: 0
 	        });
 	    });
