--- a/investor.html
+++ b/investor.html
@@ -130,7 +130,7 @@
 		<section class="module">
 			<div class="container">
 
-					<!-- CONTENT -->
+				<!-- CONTENT -->
 				<div class="row">		
 					<br><br>
 					<div class="col-sm-12">
@@ -139,7 +139,7 @@
 						<!-- typeform -->
 
 						<!-- Change the width and height values to suit you best -->
-						<div class="typeform-widget" data-url="https://shad11.typeform.com/to/CXtf0c" data-text="Contact Form" style="width:100%;height:500px;"></div>
+						<div class="col-sm-12 col-md-12 col-lg-12 typeform-widget" data-url="https://shad11.typeform.com/to/CXtf0c" data-text="Contact Form" style="width:100%;height:500px;"></div>
 						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 						<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/contact-form-template/?utm_campaign=CXtf0c&amp;utm_source=typeform.com-4406747-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-contactform&amp;utm_term=EN" style="color: #999" target="_blank">Contact form</a>powered by Typeform</div>
 						<br>
