--- a/16hrs.html
+++ b/16hrs.html
@@ -105,7 +105,7 @@
 	<!-- WRAPPER -->
 	<div class="wrapper">
 
-		<section id="hero" class="module-hero bg-black-alfa-70 color-white fullheight parallax" data-background="assets/images/beatrader.jpg">
+		<section id="hero" class="module-hero bg-black-alfa-70 color-white fullheight parallax" data-background="assets/images/time.jpg">
 
 			
 			<div class="hero-caption">
