--- a/60hrs.html
+++ b/60hrs.html
@@ -81,7 +81,7 @@
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
 				<ul class="inner-nav onepage-nav pull-right">
 		
-					<li><a href="https://investkeen.com">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="https://investkeen.com#about">About</a></li>
 					<li class="has-submenu">
 					<a>Services</a>
@@ -105,7 +105,7 @@
 	<!-- WRAPPER -->
 	<div class="wrapper">
 
-		<section id="hero" class="module-hero bg-black-alfa-70 color-white fullheight parallax" data-background="assets/images/beatrader.jpg">
+		<section id="hero" class="module-hero bg-black-alfa-70 color-white fullheight parallax" data-background="assets/images/time.jpg">
 
 			
 			<div class="hero-caption">
@@ -124,10 +124,8 @@
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
 								
 							</div>
-						</div><br><br>
-						<!-- <div class="col-sm-12 text-normal text-center">
-						<p>As we all know, trading is both art and science of forecasting values for shorter interval of time. However, most of the traders get stuck into a loop of fear and greed. A team of experienced global traders help you learn those techniques which will safeguard you against the pitfalls of trading.</p>
-						</div> -->
+						</div>
+					
 					</div>
 
 				</div>
