--- a/16hrs.html
+++ b/16hrs.html
@@ -144,8 +144,10 @@
 					<br><br>
 					<div class="col-sm-12">
 						
-						<h1 class="alegreya text-xl">Have you ever heard of terms like ‘he lost his money in the stock market? Mutual funds are subject to market risks? </h1><br><p>There is a famous chinese saying <blockquote><p> Give a man a fish and you feed him for a day, teach a man to fish and you feed him for a lifetime.</p></blockquote> Since the financial industry began, people have been victims of fraudulent and unethical practices in the market. </p> 
-						<p>After taking this course of one month a learner will be able to become self-sufficient in matters of personal finance handling. The course covers everything from risk assessment to management of personal finance.</p>
+						<h1 class="alegreya text-xl">Have you ever heard things like ‘he lost his money in the stock market, mutual funds are subject to market risks, tax liability incurred on investments‘?</h1><br>
+						<p>Have you ever wondered what this all means?</p><p>There is a famous Chinese saying: <blockquote><p> Give a man a fish and you feed him for a day, teach a man to fish and you feed him for a lifetime.</p></blockquote> Since the financial industry began, people have been victims of fraudulent and unethical practices in the market. Investkeen takes pride in teaching people how to ‘fish’.  </p> 
+						<p>After taking this course of one month a learner will be able to become self-sufficient in matters of personal finance handling.</p>
+						<p>The course syllabus covers everything from risk assessment to management of personal finance. No more dependence on second-hand information from anybody.</p>
 						<h1 class="alegrreya text-normal">Outline of the course:</h1>
 						<ul>
 						<li>HOUR 1: Overview(personal finance)</li>
