--- a/16hrs.html
+++ b/16hrs.html
@@ -168,6 +168,7 @@
 						<li>HOUR 16: Recap + where is the future?</li>
 
 						</ul>
+						<p><strong>Duration :  One month</strong><br><strong>Classes on:</strong>  Saturdays and Sundays (2 hours each day)<br><strong>Classes commence :</strong> 1 OCT 2016<br><strong>Total number of hours :</strong> 16<br><strong>Batch size : </strong> 12 people.<br><strong>Mode of Delivery of course :</strong> Classroom lectures and visualizations along with Q&A sessions.<br>
 
 						<p>You can schedule a call with one of our trainer to ask about course in detail:</p>
 						
