--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 					<div class="text-center">
 					<h1 class="montserrat text-xxxxl">About Us</h1>
 					<br>
-					<h1 class="alegreyasc text-normal divider-line">Your money. Our efforts. Your profits.</p>
+					<h1 class="alegreyasc text-normal divider-line">Your money. Our effort. Your profit.</p>
 							
 					<h1 class="alegreya text-aboutus"><p>Investkeen Capital strives to place itself as a highly transparent and ethical financial institution. It believes in spreading education and awareness about safe investment practices. Every investment promising a lucrative return has many visible as well as hidden risks associated with it. With an approach of balancing risk and reward, Investkeen helps you grow your money in a safe and steady manner, hand-holding you every step of the way. </p></h1>
 					</div>
@@ -469,7 +469,7 @@
 
 						<div class="module-header text-center">
 							<h2 class="montserrat text-uppercase">Team</h2>
-							<p class="lead divider-line">Creative minds with the extraordinary skills.</p>
+							<p class="lead divider-line">Creative minds with extraordinary skills.</p>
 						</div>
 
 					</div>
@@ -554,7 +554,7 @@
 								</div>
 							</div>
 							<div class="team-inner">
-								<h6 class="team-name">Saurabh Rohilla</h6>
+								<h6 class="team-name">Saurabh Rohila</h6>
 								<span class="team-role">Chief Strategist Officer</span>
 							</div>
 						</div>
