phew! It's over!

--- a/investor2.html
+++ b/investor2.html
@@ -79,24 +79,23 @@
 		
 			<!-- MAIN MENU -->
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
-				<ul class="inner-nav onepage-nav pull-right">
-		
-					<li><a href="http://investkeen.com">Home</a></li>
-					<li><a href="ihttp://investkeen.com#about">About</a></li>
-					<li class="has-submenu">
-					<a>Services</a>
-					 <ul class="submenu">
-							<li><a href="http://investkeen.com#individual">For Individuals</a></li>
-							<li><a href="http://investkeen.com#corporates">For Corporates</a></li>
-					 </ul>		
-					</li>
+							<ul class="inner-nav pull-right">
+					
+								<li><a href="index.html">Home</a></li>
+								<li><a href="index.html#about">About</a></li>
+								<li class="has-submenu">
+								<a>Services</a>
+								 <ul class="submenu">
+										<li><a href="index.html#individual">For Individuals</a></li>
+										<li><a href="index.html#corporates">For Corporates</a></li>
+								 </ul>		
+								</li>
 
-					<li><a href="http://investkeen.com#education">Education</a></li>
-					<li><a href="http://investkeen.com#team">Our Team</a></li>
-					<li><a href="http://investkeen.com#career">Career</a></li>
-					<li><a href="http://investkeen.com#contact">Contact Us</a></li>
-				</ul>
-			</nav>
+								<li><a href="index.html#education">Education</a></li>
+								<li><a href="index.html#team">Our Team</a></li>
+								<li><a href="index.html#career">Career</a></li>
+								<li><a href="index.html#contact">Contact Us</a></li>
+					
 		
 		</div>
 	</header>
