--- a/16hrs.html
+++ b/16hrs.html
@@ -79,23 +79,23 @@
 		
 			<!-- MAIN MENU -->
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
-				<ul class="inner-nav onepage-nav pull-right">
-		
-					<li><a href="http://investkeen.com">Home</a></li>
-					<li><a href="ihttp://investkeen.com#about">About</a></li>
+				<ul class="inner-nav pull-right">
+			
+					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html#about">About</a></li>
 					<li class="has-submenu">
 					<a>Services</a>
 					 <ul class="submenu">
-							<li><a href="http://investkeen.com#individual">For Individuals</a></li>
-							<li><a href="http://investkeen.com#corporates">For Corporates</a></li>
+							<li><a href="index.html#individual">For Individuals</a></li>
+							<li><a href="index.html#corporates">For Corporates</a></li>
 					 </ul>		
 					</li>
 
-					<li><a href="http://investkeen.com#education">Education</a></li>
-					<li><a href="http://investkeen.com#team">Our Team</a></li>
-					<li><a href="http://investkeen.com#career">Career</a></li>
-					<li><a href="http://investkeen.com#contact">Contact Us</a></li>
-		
+					<li><a href="index.html#education">Education</a></li>
+					<li><a href="index.html#team">Our Team</a></li>
+					<li><a href="index.html#career">Career</a></li>
+					<li><a href="index.html#contact">Contact Us</a></li>
+			
 				</ul>
 			</nav>
 		
@@ -168,7 +168,7 @@
 						<li>HOUR 16: Recap + where is the future?</li>
 
 						</ul>
-						<p><strong>Duration :  One month</strong><br><strong>Classes on:</strong>  Saturdays and Sundays (2 hours each day)<br><strong>Classes commence :</strong> 1 OCT 2016<br><strong>Total number of hours :</strong> 16<br><strong>Batch size : </strong> 12 people.<br><strong>Mode of Delivery of course :</strong> Classroom lectures and visualizations along with Q&A sessions.<br>
+						<p><strong>Duration :</strong> One month<br><strong>Classes on:</strong>  Saturdays and Sundays (2 hours each day)<br><strong>Classes commence :</strong> 1 OCT 2016<br><strong>Total number of hours :</strong> 16<br><strong>Batch size : </strong> 12 people.<br><strong>Mode of Delivery of course :</strong> Classroom lectures and visualizations along with Q&A sessions.<br>
 
 						<p>You can schedule a call with one of our trainer to ask about course in detail:</p>
 						
