--- a/investor.html
+++ b/investor.html
@@ -57,7 +57,7 @@
 	</div>
 	<!-- END PRELOADER -->
 
-	<!-- HEADER -->
+		<!-- HEADER -->
 	<header class="header header-fixed header-transparent">
 		<div class="container">
 			<!-- YOUR LOGO HERE -->
@@ -79,8 +79,8 @@
 		
 			<!-- MAIN MENU -->
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
-				<ul class="inner-nav onepage-nav pull-right">
-		
+				<ul class="inner-nav pull-right">
+			
 					<li><a href="index.html">Home</a></li>
 					<li><a href="index.html#about">About</a></li>
 					<li class="has-submenu">
@@ -95,12 +95,15 @@
 					<li><a href="index.html#team">Our Team</a></li>
 					<li><a href="index.html#career">Career</a></li>
 					<li><a href="index.html#contact">Contact Us</a></li>
+			
 		
 				</ul>
 			</nav>
 		
 		</div>
 	</header>
+	<!-- END HEADER -->
+
 
 	<div class="wrapper">
 
