--- a/60days.html
+++ b/60days.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Investkeen Capital | 60 Hours</title>
+	<title>Investkeen Capital | 60 Days</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
@@ -248,7 +248,7 @@
 	<script>
 	    $(function(){
 	        $(".element").typed({
-	            strings: ["^1000 Hours"],
+	            strings: ["^1000 Days"],
 	            typeSpeed: 0
 	        });
 	    });
