--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 </section>
 
 <!-- parallax background -->
-<section id="about" name="about" class="module fullheight bg-black-alfa-70 color-white parallax" data-background="assets/images/aboutus.jpg">
+<section id="about" name="about" class="module bg-black-alfa-70 color-white parallax" data-background="assets/images/aboutus.jpg">
 	
 		<div class="container">
 
@@ -321,7 +321,7 @@
 		</section>
 
 		<!--parallax background -->		
-		<section id="corporates" name="corporates" class="module bg-black-alfa-50 fullheight color-white parallax" data-background="assets/images/trading.jpg">
+		<section id="corporates" name="corporates" class="module bg-black-alfa-50 color-white parallax" data-background="assets/images/trading.jpg">
 		
 			<div class="container">
 
@@ -417,7 +417,7 @@
 			
 	</section>
 
-	<section id="education" name="education" class="module bg-black-alfa-20 color-white parallax" data-background="assets/images/education.jpeg">
+	<section id="education" name="education" class="module bg-black-alfa-20 color-white parallax" data-background="assets/images/education.jpg">
 	
 		<div class="container">
 
@@ -451,7 +451,7 @@
 
 					 -->
 							 <div class="m-t-50 m-b-20">
-							 	<a href="60hrs.html" class="btn btn-circle btn-white btn-education text-xxl">60 Hours</a>
+							 	<a href="60days.html" class="btn btn-circle btn-white btn-education text-xxl">60 Hours</a>
 							 </div>
 					</div>
 				</div>	
@@ -555,7 +555,7 @@
 							</div>
 							<div class="team-inner">
 								<h6 class="team-name">Saurabh Rohila</h6>
-								<span class="team-role">Chief Strategist Officer</span>
+								<span class="team-role">Chief Strategy Officer</span>
 							</div>
 						</div>
 					</div>
@@ -568,7 +568,7 @@
 		<!-- END TEAM -->
 		
 		<!--parallax background -->		
-		<section id="career" name="career" class="module bg-black-alfa-30 fullheight color-white parallax" data-background="assets/images/career.jpg">
+		<section id="career" name="career" class="module bg-black-alfa-30 color-white parallax" data-background="assets/images/career.jpg">
 		
 			<div class="container">
 
