--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<meta property="og:image" content="assets/images/facebookshareimage.png" />
+	<meta property="og:image" content="http://investkeen.com/assets/images/facebookshareimage.png" />
 	
 	<title>Investkeen Capital</title>
 	
