--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		
 			<!-- MAIN MENU -->
 			<nav id="custom-collapse" class="main-nav collapse clearfix">
-				<ul class="inner-nav onepage-nav pull-right">
+				<ul class="inner-nav alegreyasc onepage-nav pull-right">
 		
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
@@ -125,6 +125,11 @@
 										<div class="m-t-50">
 											<a href="#about" class="btn btn-circle btn-white btn-lg">Know More</a>
 										</div>
+										<ul class="social-icons social-icons-simple">
+											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+											<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										</ul>
 									</div>
 								</div>
 
@@ -470,7 +475,7 @@
 
 						<div class="module-header text-center">
 							<h2 class="montserrat text-uppercase">Team</h2>
-							<p class="lead divider-line">Creative minds with extraordinary skills.</p>
+							<!-- <p class="lead divider-line">Creative minds with extraordinary skills.</p> -->
 						</div>
 
 					</div>
@@ -486,7 +491,7 @@
 								<div class="team-social">
 									<div>
 										<div>
-											<a href="https://in.linkedin.com/in/kishorekundan"><i class="fa fa-linkedin"></i></a>
+											<a href="https://in.linkedin.com/in/kishorekundan" target="_blank"><i class="fa fa-linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -507,7 +512,7 @@
 								<div class="team-social">
 									<div>
 										<div>
-											<a href="https://www.linkedin.com/in/shad-ahmad-400b6235https://in.linkedin.com/in/kishorekundan"><i class="fa fa-linkedin"></i></a>
+											<a href="https://www.linkedin.com/in/shad-ahmad-400b6235" target="_blank"><i class="fa fa-linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -528,7 +533,7 @@
 								<div class="team-social">
 									<div>
 										<div>
-											<a href="https://www.linkedin.com/in/charuthapliyal"><i class="fa fa-linkedin"></i></a>
+											<a href="https://www.linkedin.com/in/charuthapliyal" target="_blank"><i class="fa fa-linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -549,7 +554,7 @@
 								<div class="team-social">
 									<div>
 										<div>
-											<a href="https://www.linkedin.com/in/saurabh-rohila-b56b2371"><i class="fa fa-linkedin"></i></a>
+											<a href="https://www.linkedin.com/in/saurabh-rohila-b56b2371" target="_blank"><i class="fa fa-linkedin"></i></a>
 										</div>
 									</div>
 								</div>
@@ -579,7 +584,7 @@
 						<div class="text-center">
 						<h class="alegreya text-xxl">We don’t believe in qualifications or your prior experience.</h1><br>
 						
-						<h1 class="alegreya text-xxxl">We believe in people. We build them!</h1><br>	
+						<h1 class="alegreya text-xxxxl">We believe in people. We build them!</h1><br>	
 						
 						<div class="m-t-50">
 						<a class="typeform-share link text-normal btn btn-circle btn-white btn-lg" href="https://shad11.typeform.com/to/vX16sM" data-mode="1" target="_blank">Join Us!</a>
