--- a/16hrs.html
+++ b/16hrs.html
@@ -125,7 +125,7 @@
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
 								<br><br>
 								<div class="col-sm-12 text-normal text-center">
-								<p>It takes a lot of effort to earn money. The only way to safeguard it is to learn how.</p>
+								<p>It takes a lot of effort to earn money. Safeguard yourself from market frauds and learn basics of investments, banking, Insurances and pitfalls of the different financial products.  Invest 16 hours to become self-sufficient in making wise decisions for your personal finance and Investments.</p>
 								
 								</div>
 							</div>
