--- a/currencyhedging.html
+++ b/currencyhedging.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
+	<meta property="og:image" content="http://investkeen.com/assets/images/facebookshareimage.png" />
 	
 	<title>Investkeen Capital | Currency Hedging</title>
 	
@@ -118,6 +119,9 @@
 							<div class="col-sm-12 text-center">
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
 							</div>
+							<div class="col-sm-12 text-normal text-center">
+							<p>Have an edge over your competitors. Sleep peacefully. Trade confidently. Stop worrying about currency fluctuations. Increase your profitability upto 25%.</p>
+
 						</div><br><br>
 						<!-- <div class="col-sm-12 text-normal text-center">
 						<p>As we all know, trading is both art and science of forecasting values for shorter interval of time. However, most of the traders get stuck into a loop of fear and greed. A team of experienced global traders help you learn those techniques which will safeguard you against the pitfalls of trading.</p>
