--- a/trader.html
+++ b/trader.html
@@ -140,6 +140,10 @@
 						“I have heard stories of huge profits and losses in trading stocks and want to know the truth behind it.” <br>
 						“I have been continuously pitched by different stock brokers to start trading in stocks and I want to know every fact and figure before I begin.”</p>
 						<p>Then now is the time to start arming yourself with the right knowledge and approach to trading. Let us help you get clarity on concepts which were enveloped in mystery and financial jargon till now. Take the first step to financial wisdom by answering the following questions.</p>
+						<!-- Change the width and height values to suit you best -->
+						<div class="typeform-widget" data-url="https://shad11.typeform.com/to/MNLABt" data-text="Be a trader" style="width:100%;height:500px;"></div>
+						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+						<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=MNLABt&amp;utm_source=typeform.com-4406747-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 					</div>
 				
 				
