--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
 	<section class="module">
 				<div class="container">
-				<h1 class="alegreya text-center text-xl quotes">"The individual investor should act consistently as an investor and not as a speculator." </h1>
-						<p class="text-center alegreyasc text-normal">- Benjamin Graham</p>
+				<h1 class="alegreya text-center text-xl quotes">“Know what you own, and know why you own it.” </h1>
+						<p class="text-center alegreyasc text-normal">- Peter Lynch </p>
 
 				</div>
 
@@ -305,8 +305,8 @@
 		</section>
 		<section class="module">
 					<div class="container">
-					<h1 class="alegreya text-center text-xl quotes">"Someone's sitting in the shade today because someone planted a tree a long time ago."</h1>
-					<p class="text-center alegreyasc text-normal">- Warren Buffet</p>
+					<h1 class="alegreya text-center text-xl quotes">“Buy not on optimism, but on arithmetic.”</h1>
+					<p class="text-center alegreyasc text-normal">- Benjamin Graham</p>
 					</div>		
 		</section>
 
@@ -399,8 +399,8 @@
 		 -->
 	<section class="module">
 			<div class="container">
-			<h1 class="alegreya text-center text-xl quotes">“If you have more than 120 or 130 I.Q. points, you can afford to give the rest away. You don’t need extraordinary intelligence to succeed as an investor.”</h1>
-					<p class="text-center alegreyasc text-normal">- Warren Buffet</p>
+			<h1 class="alegreya text-center text-xl quotes">“An investment in knowledge pays the best interest.” </h1>
+					<p class="text-center alegreyasc text-normal">- Benjamin Franklin</p>
 
 			</div>
 
@@ -444,7 +444,7 @@
 
 					 -->
 							 <div class="m-t-50 m-b-20">
-							 	<a href="60days.html" class="btn btn-circle btn-white btn-education">60 Days</a>
+							 	<a href="60days.html" class="btn btn-circle btn-white btn-education">EPIT</a>
 							 </div>
 					</div>
 				</div>	
