--- a/epit.html
+++ b/epit.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 	<meta property="og:image" content="http://investkeen.com/assets/images/facebookshareimage.png" />
 	
-	<title>Investkeen Capital | 60 Days</title>
+	<title>Investkeen Capital | EPIT</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
