--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
 					 -->
 							 <div class="m-t-50 m-b-20">
-							 	<a href="60days.html" class="btn btn-circle btn-white btn-education">EPIT</a>
+							 	<a href="epit.html" class="btn btn-circle btn-white btn-education"> E P I T</a>
 							 </div>
 					</div>
 				</div>	
