--- a/epitcoursedetails.html
+++ b/epitcoursedetails.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 	<meta property="og:image" content="http://investkeen.com/assets/images/epit.jpg" />
 	
-	<title>Investkeen Capital | EPIT</title>	
+	<title>Investkeen Capital | EPIT Course Details</title>	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
@@ -115,13 +115,6 @@
 								<div class="col-sm-12 text-normal text-center">
 								<p>Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We will cover topics ranging from fundamentals of financial markets upto becoming a good advisor & trader in the investment banking domain. Classes will be both theoretical and practical. </p>
 
-								<div class="m-t-50">
-								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Shedule a call with us</a>
-								<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-
-								</div>
-								<br>
-
 							</div>
 						</div>
 					
@@ -213,7 +206,7 @@
 						<p class="text-center"><i>In this part of the training each and every concept of DMDM module will be covered.</i></p>
 
 						<!-- typeform -->
-						<div class="typeform-widget" data-url="https://shad11.typeform.com/to/B4U4ds" data-text="EPIT" style="width:100%;height:500px;"></div>
+						<div class="typeform-widget" data-url="https://investkeen.typeform.com/to/B4U4ds" data-text="EPIT" style="width:100%;height:500px;"></div>
 						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 						<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=B4U4ds&amp;utm_source=typeform.com-4406747-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 
