--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 						<h1 class="alegreya text-xxxxl">We believe in people. We build them!</h1><br>	
 						
 						<div class="m-t-50">
-						<a class="typeform-share link text-normal btn btn-circle btn-white btn-joinus" href="https://shad11.typeform.com/to/vX16sM" data-mode="1" target="_blank">Join Us!</a>
+						<a class="typeform-share link text-normal btn btn-circle btn-white btn-joinus" href="https://investkeen.typeform.com/to/vX16sM" data-mode="1" target="_blank">Join Us!</a>
 						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 
 						</div>	
