--- a/epit.html
+++ b/epit.html
@@ -116,7 +116,7 @@
 								<p>Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We will cover topics ranging from fundamentals of financial markets upto becoming a good advisor & trader in the investment banking domain. Classes will be both theoretical and practical. </p>
 
 								<div class="m-t-50">
-								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Shedule a call with us</a>
+								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
 								<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
 								</div>
