--- a/epit.html
+++ b/epit.html
@@ -112,9 +112,9 @@
 							<div class="col-sm-12 text-center">
 								<br>
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
-								<div class="col-sm-12 text-normal text-center">
+								<div class="col-sm-12 text-xs text-center">
 								<br>
-								<p>Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We will cover topics ranging from fundamentals of financial markets upto becoming a good advisor & trader in the investment banking domain. Classes will be both theoretical and practical. </p>
+								<p>Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We cover topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
 								
 								<div class="m-t-50">
 								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
