--- a/16hrs.html
+++ b/16hrs.html
@@ -126,7 +126,7 @@
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
 								<br><br>
 								<div class="col-sm-12 text-normal text-center">
-								<p>&quot;It takes a lot of effort to earn money. Safeguard yourself from market frauds and learn basics of investment, banking, insurances and pitfalls of different financial products. Invest 16 Hours to become self-sufficient in making wise decisions for your personal finance and investments.</p>
+								<p>It takes a lot of effort to earn money. Safeguard yourself from market frauds and learn basics of investment, banking, insurances and pitfalls of different financial products. Invest 16 Hours to become self-sufficient in making wise decisions for your personal finance and investments.</p>
 								
 								<div class="m-t-50">
 								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
