--- a/epit.html
+++ b/epit.html
@@ -10,10 +10,10 @@
 	
 	<title>Investkeen Capital | EPIT</title>	
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="assets/images/favicon.png">
+<!-- 	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png"> -->
 	
 	<!-- Web Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet'>
@@ -27,9 +27,9 @@
 	<link href="assets/css/simple-line-icons.css" rel="stylesheet">
 	
 	<!-- Plugins -->
-	<link href="assets/css/magnific-popup.css" rel="stylesheet">
+	<!-- <link href="assets/css/magnific-popup.css" rel="stylesheet">
 	<link href="assets/css/owl.carousel.css" rel="stylesheet">
-	<link href="assets/css/flexslider.css" rel="stylesheet">
+	<link href="assets/css/flexslider.css" rel="stylesheet"> -->
 	<link href="assets/css/animate.min.css" rel="stylesheet">	
 	<!-- Template core CSS -->
 	<link href="assets/css/vertical.min.css" rel="stylesheet">
@@ -112,7 +112,7 @@
 							<div class="col-sm-12 text-center">
 								<br>
 								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
-								<div class="col-sm-12 text-xs text-center">
+								<div class="col-sm-12 text-headerline text-center">
 								<br>
 								<p>Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We cover topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
 								
@@ -147,12 +147,19 @@
 						<p>Willingness to learn with an open mind. You should be good with numbers. No prior knowledge of financial management / commerce / higher mathematics is required. .</p>
 						<h1 class="alegreyasc text-normal">Career prospects after course:</h1>
 						<p>We will conduct a final test. 100% money back guarantee if you score more than 75% on the  test.  Also, you will get a chance to have an interview with us (Investkeen Capital)  for a job of  4-8 lpa depending on your performance. We will make you capable to clear both NCFM modules certified by NSE (National Stock Exchange of India)  and can easily apply for a trader role in any stock broking house.<br>You can register in any of the following batches.</p> 
-						<h1 class="alegreyasc text-normal">Modules:</h1>
-						<p class="alegreyasc text-center">Weekday Batch, 19 Sept, 2016 - 18th Oct, 2016</p>
-						<p>Lecture Timings: 10.00 am - 12.00 pm (Mon to Fri)<br>Lunch: 12pm -  1 pm (Company sponsored for interns)<br>Optional internship: 1 pm - 6 pm (opportunity for on the job training)<br>Course Fee: 25,000/- (Company will pay certification charges for both CMDM and DMDM)</p><br>
+						<h1 class="alegreyasc text-normal">Batches:</h1>
+						<h2 class="alegreyasc  text-center text-headerline">Offline Course:</h2>
+						<p class="alegreyasc text-center">Weekday Batch, 3 Oct 2016 - 4 Nov 2016</p>
+						<p>Lecture Timings: 10.00 am - 1.00 pm (Mon to Fri)<br>Lunch:  1.00 pm - 2.00 pm (Company sponsored for interns)<br>Optional internship: 2.00 pm - 5.00 pm (opportunity for on the job training)<br>Course Fee: 25,000/- (Company will pay certification charges for both CMDM and DMDM)</p><br>
 						<p class="alegreyasc text-center">Weekend Batch, 1st Oct, 2016- 27th Nov, 2016</p>
-						<p>Lecture Timings : 1.00 pm - 3.00 pm (Only on Saturday & Sunday)<br>Course fee : 25,000/- (Company will pay certification charges for both CMDM and DMDM)</p>
-						<br><hr>
+						<p>Lecture Timings : 1.00 pm - 4.00 pm (Only on Saturday & Sunday)<br>Course fee : 25,000/- (Company will pay certification charges for both CMDM and DMDM)</p>
+						<br>
+						<h2 class="alegreyasc  text-center text-headerline">Online Course:</h2>
+						<p class="alegreyasc text-center">Weekend batch, 1st Oct 2016 - 27th Nov, 2016</p>
+						<p>Lecture Timings : 6.00pm - 9.00 pm (Only on Saturday & Sunday)<br>Course Fee: 12,500/-</p>
+						<p><i>** 20% early bird discount before 20th September.</i></p>
+
+						<hr>
 
 
 						<h1 class="alegreyasc text-xl text-center">Course Structure</h1><br>
