--- a/index.html
+++ b/index.html
@@ -561,9 +561,8 @@
 					<!-- END TEAM MEMBER -->
 
 				</div>
-				<div class="row">
-			    <!-- <div class="col-sm-6 col-md-4"></div> -->
-
+				<!-- <div class="row">
+			  
 					<div class="col-sm-6 col-md-3">
 
 						<div class="team-item m-b-sm-35">
@@ -584,10 +583,9 @@
 							</div>
 						</div>
 					</div>
-				<!-- <div class="col-sm-6 col-md-4"></div> -->
+				 <div class="col-sm-6 col-md-4"></div> 
 					
-				</div>
-
+				</div> -->
 			</div>
 		</section>
 		<!-- END TEAM -->
