--- a/investor.html
+++ b/investor.html
@@ -119,11 +119,11 @@
 						<div class="row">
 						<br><br>
 							<div class="col-sm-12 text-center"><br>
-								<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element">Be an Investor</span></h1>
+								<h1 class="text-uppercase text-xxl alegreyasc m-0"><span class="element">Be an Investor</span></h1>
 							</div>
 						</div>
 						<div class="col-sm-12 text-normal text-center"><br>
-						<p>Put your money at work to secure your future and beat inflation. Get high returns in the safest possible way by balancing risks and rewards of your long term investments.</p>
+						<p style="font-family: 'Open Sans', sans-serif;">Put your money at work to secure your future and beat inflation. Get high returns in the safest possible way by balancing risks and rewards of your long term investments.</p>
 						
 						<div class="m-t-50">
 						<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
