--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 				<div class="col-sm-12">
 					<div class="text-center">
-					<h1 class="alegreyasc text-xxxxl">About Us</h1>
+					<h1 class="montserra text-xxxxl">About Us</h1>
 					<br>
 					<h1 class="alegreyasc text-normal divider-line">Your money. Our effort. Your profit.</p>
 							
@@ -480,7 +480,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="team-inner">btn btn-lg btn-link btn-base
+							<div class="team-inner">
 								<h6 class="team-name">Shad Ahmad</h6>
 								<span class="team-role">CMO</span>
 							</div>
