--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 				<div class="col-sm-12">
 					<div class="text-center">
-					<h1 class="montserra text-xxxxl">About Us</h1>
+					<h1 class="montserrat text-xxxxl">About Us</h1>
 					<br>
 					<h1 class="alegreyasc text-normal divider-line">Your money. Our effort. Your profit.</p>
 							
@@ -885,7 +885,7 @@
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins.min.js"></script>
 	<script src="assets/js/custom.min.js"></script>
-	<script src="assets/js/typed.js"></script>
+	<!-- <script src="assets/js/typed.js"></script>
 	<script>
 	    $(function(){
 	        $(".element").typed({
@@ -893,7 +893,7 @@
 	            typeSpeed: 0
 	        });
 	    });
-	</script>
+	</script> -->
 
 </body>
 
