--- a/investor.html
+++ b/investor.html
@@ -12,13 +12,11 @@
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon.png">
-	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+	
 	
 	<!-- Web Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+	<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'> -->
 	<link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
 
@@ -30,9 +28,9 @@
 	<link href="assets/css/simple-line-icons.css" rel="stylesheet">
 	
 	<!-- Plugins -->
-	<link href="assets/css/magnific-popup.css" rel="stylesheet">
+	<!-- <link href="assets/css/magnific-popup.css" rel="stylesheet">
 	<link href="assets/css/owl.carousel.css" rel="stylesheet">
-	<link href="assets/css/flexslider.css" rel="stylesheet">
+	<link href="assets/css/flexslider.css" rel="stylesheet"> -->
 	<link href="assets/css/animate.min.css" rel="stylesheet">
 	
 	<!-- Template core CSS -->
@@ -119,11 +117,11 @@
 						<div class="row">
 						<br><br>
 							<div class="col-sm-12 text-center"><br>
-								<h1 class="text-uppercase text-xxl alegreyasc m-0"><span class="element">Be an Investor</span></h1>
+								<h1 class="text-xxxl alegreyasc m-0">Be an Investor</h1>
 							</div>
 						</div>
 						<div class="col-sm-12 text-normal text-center"><br>
-						<p style="font-family: 'Open Sans', sans-serif;">Put your money at work to secure your future and beat inflation. Get high returns in the safest possible way by balancing risks and rewards of your long term investments.</p>
+						<p style="font-family: 'Open Sans', sans- serif; font-weight: 100">Put your money at work to secure your future and beat inflation. Get high returns in the safest possible way by balancing risks and rewards of your long term investments.</p>
 						
 						<div class="m-t-50">
 						<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
@@ -235,7 +233,7 @@
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins.min.js"></script>
 	<script src="assets/js/custom.min.js"></script>
-	<script src="assets/js/typed.js"></script>
+	<!-- <script src="assets/js/typed.js"></script>
 	<script>
 	    $(function(){
 	        $(".element").typed({
@@ -243,9 +241,9 @@
 	            typeSpeed: 0
 	        });
 	    });
-	</script>
+	</script> -->
 
 </body>
 
-<!-- Mirrored from neomax.mycookroom.ru/1.0.4/portfolio-single-2.html by HTTrack Website Copier/3.x [XR&CO'2013], Wed, 31 Aug 2016 18:34:16 GMT -->
+
 </html>
