--- a/trader.html
+++ b/trader.html
@@ -114,11 +114,11 @@
 						<div class="row">
 						<div class="col-sm-12 text-center">
 						<br>
-							<h1 class="text-uppercase text-xxl montserrat m-0"><span class="element"></span></h1>
+							<h1 class="text-xxxl alegreyasc m-0">Be A Trader</h1>
 						</div>
 						</div><br>
 						<div class="col-sm-12 text-normal text-center">
-						<p>As we all know, trading is both art and science of forecasting values for shorter interval of time. However, most of the traders get stuck into a loop of fear and greed. A team of experienced global traders help you learn those techniques which will safeguard you against the pitfalls of trading.</p>
+						<p style="font-family: 'Open Sans', sans- serif; font-weight: 100">As we all know, trading is both art and science of forecasting values for shorter interval of time. However, most of the traders get stuck into a loop of fear and greed. A team of experienced global traders help you learn those techniques which will safeguard you against the pitfalls of trading.</p>
 					
 						<div class="m-t-50">
 						<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
@@ -232,7 +232,7 @@
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins.min.js"></script>
 	<script src="assets/js/custom.min.js"></script>
-	<script src="assets/js/typed.js"></script>
+	<!-- <script src="assets/js/typed.js"></script>
 	<script>
 	    $(function(){
 	        $(".element").typed({
@@ -240,7 +240,7 @@
 	            typeSpeed: 0
 	        });
 	    });
-	</script>
+	</script> -->
 
 </body>
 
