--- a/16hrs.html
+++ b/16hrs.html
@@ -125,11 +125,11 @@
 								</div> -->
 								<h1 class="text-xxxl alegreyasc m-0">16 Hours</h1>
 								<br><br>
-								<div class="col-sm-12 text-normal text-center">
+								<div class="col-sm-12 text-normal text-center text-headerline">
 								<p style="font-family: 'Open Sans', sans- serif; font-weight: 100">It takes a lot of effort to earn money. Safeguard yourself from market frauds and learn basics of investment, banking, insurances and pitfalls of different financial products. Invest 16 Hours to become self-sufficient in making wise decisions for your personal finance and investments.</p>
 								
 								<div class="m-t-50">
-								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
+								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call</a>
 								<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 								</div>
 								<section id="section05" class="demo inner-nav onepage-nav p-t-50">
