--- a/trader.html
+++ b/trader.html
@@ -117,11 +117,11 @@
 							<h1 class="text-xxxl alegreyasc m-0">Be A Trader</h1>
 						</div>
 						</div><br>
-						<div class="col-sm-12 text-normal text-center">
+						<div class="col-sm-12 text-normal text-center text-headerline">
 						<p style="font-family: 'Open Sans', sans- serif; font-weight: 100">As we all know, trading is both art and science of forecasting values for shorter interval of time. However, most of the traders get stuck into a loop of fear and greed. A team of experienced global traders help you learn those techniques which will safeguard you against the pitfalls of trading.</p>
 					
 						<div class="m-t-50">
-						<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call with us</a>
+						<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call</a>
 						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 						</div>
 						<section id="section05" class="demo inner-nav onepage-nav p-t-50">
