--- a/epit.html
+++ b/epit.html
@@ -111,10 +111,10 @@
 						<div class="row">
 							<div class="col-sm-12 text-center">
 								<br>
-								<h1 class="text-xxxl alegreyasc m-0">Executive Program in Investment and Trading <br>(EPIT)</h1>
+								<h1 class="text-xxl alegreyasc m-0">Executive Program in Investment and Trading <br>(EPIT)</h1>
 								<div class="col-sm-12 text-headerline text-center">
 								<br>
-								<p class="text-aboutus " style="font-family: 'Open Sans', sans- serif; font-weight: 100">Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We cover topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
+								<p class="text-aboutus " style="font-family: 'Open Sans', sans- serif; font-weight: 100; font-size: 15px;">Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We cover topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
 								
 								<div class="m-t-50">
 								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call</a>
