--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 							</div>
 							<div class="team-inner">
 								<h6 class="team-name">Kundan Kishore</h6>
-								<span class="team-role">CEO</span>
+								<span class="team-role">Head, Sales & Trading</span>
 							</div>
 						</div>
 					</div>
@@ -482,7 +482,7 @@
 							</div>
 							<div class="team-inner">
 								<h6 class="team-name">Shad Ahmad</h6>
-								<span class="team-role">CMO</span>
+								<span class="team-role">Chief Marketing Officer</span>
 							</div>
 						</div>
 					</div>
