--- a/epit.html
+++ b/epit.html
@@ -233,7 +233,7 @@
 					</div>
 				
 					<div class="m-t-50  text-center m-b-20">
-							<a href="../16hrs.html" class="btn btn-circle btn-white btn-insidewhitebg">Explore The 16 hours course</a>
+							<a href="../16hrs.html" class="btn btn-circle btn-white btn-insidewhitebg">Explore 16 Hours</a>
 					</div>
 
 			</div>
