think buttons that auto adapt to text inside are cool?Nope.Had to come up with a hack to make them all equal sized

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
 					 -->
 							 <div class="m-t-50 m-b-20">
-							 	<a href="epit.html" class="btn  btn-circle btn-white btn-education"> E P I T</a>
+							 	<a href="epit.html" class="btn  btn-circle btn-white btn-education">&nbsp &nbsp EPIT &nbsp &nbsp </a>
 							 </div>
 					</div>
 				</div>	
